# TermSaver

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
include/: Art.hpp  AsciiArt.hpp  BouncingAsciiLogo.hpp  HeartbeatAsciiLogo.hpp  Logo.hpp  Menu.hpp  RippleAsciiLogo.hpp  RotatingLineLogo.hpp
src/: AsciiArt.cpp  BouncingAsciiLogo.cpp  HeartbeatAsciiLogo.cpp  Logo.cpp  Menu.cpp  RippleAsciiLogo.cpp  RotatingLineLogo.cpp  main.cpp
src/core/: AsciiArt.cpp  AsciiArt.hpp  CellFader.cpp  CellFader.hpp  Menu.cpp  Menu.hpp  State.hpp  StateManager.cpp  StateManager.hpp
src/logos/: AsciiLogo.cpp  AsciiLogo.hpp  BouncingAsciiLogo.cpp  BouncingAsciiLogo.hpp  HeartbeatAsciiLogo.cpp  HeartbeatAsciiLogo.hpp  Logo.cpp  Logo.hpp  RippleAsciiLogo.cpp  RippleAsciiLogo.hpp  RotatingLineLogo.cpp  RotatingLineLogo.hpp  ScanningAsciiLogo.cpp  ScanningAsciiLogo.hpp  TypewriterAsciiLogo.cpp  TypewriterAsciiLogo.hpp
src/states/: AnimationState.cpp  AnimationState.hpp  CategorySelectState.cpp  CategorySelectState.hpp  ConcreteStates.cpp  ConcreteStates.hpp  IntroState.cpp  IntroState.hpp  LogoSelectState.cpp  LogoSelectState.hpp  MenuState.cpp  MenuState.hpp  NoiseFadingSettingsState.cpp  NoiseFadingSettingsState.hpp  NoiseSettingsState.cpp  NoiseSettingsState.hpp  ScanDirectionSelectState.cpp  ScanDirectionSelectState.hpp  SettingsState.cpp  SettingsState.hpp  SolidBlockFadingSettingsState.cpp  SolidBlockFadingSettingsState.hpp  SolidBlockSettingsState.cpp  SolidBlockSettingsState.hpp  TypewriterDirectionSelectState.cpp  TypewriterDirectionSelectState.hpp
